third_party/move/evm/move-to-yul/tests/test-dispatcher/ExternalCallFailure.exp


!! Move-To-Yul Diagnostics:
 error: solidity signature is not compatible with the move signature
   ┌─ tests/test-dispatcher/ExternalCallFailure.move:11:5
   │
11 │     public native fun failure_3(add: address, i:u8);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: solidity signature is not compatible with the move signature
  ┌─ tests/test-dispatcher/ExternalCallFailure.move:8:5
  │
8 │     public native fun failure_2(add: u128, i:u8);
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: external function must have at least one argument
  ┌─ tests/test-dispatcher/ExternalCallFailure.move:5:5
  │
5 │     public native fun failure_1();
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: error happens when parsing the signature
  ┌─ tests/test-dispatcher/ExternalCallFailure.move:5:5
  │
5 │     public native fun failure_1();
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
